--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Bianca &amp; Paul</title>
+    <title>Ashleigh &amp; Jarrod</title>
     <meta name="viewport" content="width=device-width, initial-scale=0.6">
     <link rel='stylesheet' href='main.css' />
     <link href="https://fonts.googleapis.com/css?family=Roboto|Playfair+Display+SC" rel="stylesheet">
