--- a/static/index.html
+++ b/static/index.html
@@ -35,7 +35,7 @@
                 <div class="image" data-10="top: 0px;" data-750="top: -60px;"></div>
                 <p id="daysCountdown"></p>
             </section>
-            
+            <!--
             <section id="our-story" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="active item">
@@ -55,6 +55,10 @@
                     <li data-target="#our-story" data-slide-to="1"></li>
                     <li data-target="#our-story" data-slide-to="2"></li>
                 </ol>
+            </section>
+            -->
+
+            <section id="our-story" data-bg="img/bg/backgroundObject1-0.jpg">
             </section>
 
             <section id="festivity-details" data-bg="img/bg/backgroundObject2.jpg">
@@ -76,6 +80,9 @@
                     </div>
                     <div class="item">
                         <img src="img/bg/backgroundObject4-3.png" width="1300" height="836">
+                        <form action="https://images.bookeasy.com.au/website/images/southernhighlands/BDHS%20Walkmap%20Berrima%20v2017.pdf">
+                            <input id = "walkingTourButton" type="submit" value="" />
+                        </form>
                     </div>
                 </div>
                 <a class="carousel-control left icn-slideshow-left" href="#about-berrima" data-slide="prev">&lsaquo;</a>
