--- a/static/index.html
+++ b/static/index.html
@@ -75,7 +75,7 @@
             <section id="festivity-details" data-bg="img/bg/backgroundObject2.png">
             </section>
 
-            <section id="weekend-activities" data-bg="img/bg/backgroundObject3.jpg">
+            <section id="weekend-activities" data-bg="img/bg/backgroundObject3.png">
             </section>
 
             <section id="about-berrima" class="carousel slide">
@@ -109,6 +109,7 @@
             </section>
 
             <section id="registry" data-bg="img/bg/backgroundObject5.png">
+                <h1 class="registry">Gift Registry</h1>
             </section>
 
             <section id="add-to-our-story" data-bg="img/bg/backgroundObject7.png">
@@ -210,7 +211,7 @@
                 </div>
 
                 <div class="third">
-
+                    <h1 class="thanks">Thank you</h1>
                 </div>
             </section>
 
