Final changes for next release of website. Fix "inseparable" in our story, fix boxes layout in gift registry, add links to accommodation, reduce size of image in "Jarrod's WIP" page

--- a/static/index.html
+++ b/static/index.html
@@ -88,6 +88,18 @@
                     </div>
                     <div class="item">
                         <img src="img/bg/backgroundObject4-2.png" width="1300" height="836">
+                        <form action="https://www.stayz.com.au/accommodation/nsw/southern-highlands/">
+                            <input id = "stayzAccomButton" type="submit" value="" />
+                        </form>
+                        <form action="https://www.holidayrentalspecialists.com.au/accommodation/region/southern-highlands">
+                            <input id = "holidayRentalSpecialistsButton" type="submit" value="" />
+                        </form>
+                        <form action="https://berrimamotel.com.au/">
+                            <input id = "berrimaBakehouseButton" type="submit" value="" />
+                        </form>
+                        <form action="https://www.gibraltarbowral.com.au/">
+                            <input id = "gibraltarHotelButton" type="submit" value="" />
+                        </form>
                     </div>
                     <div class="item">
                         <img src="img/bg/backgroundObject4-3.png" width="1300" height="836">
@@ -106,13 +118,6 @@
                         <li data-target="#about-berrima" data-slide-to="3"></li>
                     </ol>
                 </div>
-            </section>
-
-            <section id="registry" data-bg="img/bg/backgroundObject5.png">
-                <h1 class="registry">Gift Registry</h1>
-            </section>
-
-            <section id="add-to-our-story" data-bg="img/bg/backgroundObject7.png">
             </section>
 
             <section id="rsvp" onclick="ClickRSVPSection()">
@@ -215,15 +220,21 @@
                 </div>
             </section>
 
+            <section id="registry" data-bg="img/bg/backgroundObject5.png">
+                <h1 class="registry">Gift Registry</h1>
+            </section>
+
+            <section id="add-to-our-story" data-bg="img/bg/backgroundObject7.png">
+            </section>
+
             <nav id="navigation" data-717="position:absolute;top:717px; left:0;" data-718="position:fixed; top:0; left:0;">
                 <ul class="nav">
                     <li><a href="#our-story">Our Story</a></li>
                     <li><a href="#festivity-details">Festivity Details</a></li>
                     <li><a href="#about-berrima">About Berrima</a></li>
-                    <!--<li><a href="#gallery">Gallery</a></li>-->
+                    <li><a href="#rsvp">RSVP</a></li>
                     <li><a href="#registry">Gift Registry</a></li>
-                    <li><a href="#add-to-our-story">Add to our Story</a></li>
-                    <li class="last"><a href="#rsvp">RSVP</a></li>
+                    <li class="last"><a href="#add-to-our-story">Add to our Story</a></li>
                 </ul>
             </nav>
 
