Update guest list in RSVP form

--- a/static/index.html
+++ b/static/index.html
@@ -130,21 +130,25 @@
                     onsubmit="ClickSubmitForm()">
                         <label id="rsvpILabel">I</label>
                         <select id="rsvpSelectName" name="entry.365794943">
-                            <option selected disabled>Name Scroll</option>
+                            <option selected disabled>Select your name</option>
                             <option value="Daphne Baker">Daphne Baker</option>
                             <option value="Ron Baker">Ron Baker</option>
+                            <option value="Tanya Brown">Tanya Brown</option>
                             <option value="Tom Burton">Tom Burton</option>
                             <option value="Kyle Bushnell">Kyle Bushnell</option>
                             <option value="Mark Coleman">Mark Coleman</option>
+                            <option value="Hayden Corr">Hayden Corr</option>
                             <option value="Amanda Cowan">Amanda Cowan</option>
                             <option value="Gus Cowan">Gus Cowan</option>
                             <option value="Lyn Cowan">Lyn Cowan</option>
                             <option value="Megan Cowan">Megan Cowan</option>
                             <option value="Jill Cowburn">Jill Cowburn</option>
-                            <option value="Zaida del Prado Galvez">Zaida del Prado Galvez</option>
                             <option value="Reg Dorse">Reg Dorse</option>
                             <option value="Jackii Downie">Jackii Downie</option>
+                            <option value="Edrick Edrick">Edrick Edrick</option>
                             <option value="Jemma Ehsman">Jemma Ehsman</option>
+                            <option value="Jeree Galvez">Jeree Galvez</option>
+                            <option value="Zaida Galvez">Zaida Galvez</option>
                             <option value="Nick Hart">Nick Hart</option>
                             <option value="Darryl Horne">Darryl Horne</option>
                             <option value="Elisa Horne">Elisa Horne</option>
@@ -156,19 +160,25 @@
                             <option value="Kerrie James">Kerrie James</option>
                             <option value="Monica Jang">Monica Jang</option>
                             <option value="Ashley Jones">Ashley Jones</option>
-                            <option value="Kris Leigh">Kris Leigh</option>
+                            <option value="Kristopher Leigh">Kristopher Leigh</option>
                             <option value="Ayu Linardi">Ayu Linardi</option>
                             <option value="Hayleigh Livingstone">Hayleigh Livingstone</option>
                             <option value="Lachlan Ma">Lachlan Ma</option>
                             <option value="Joe Mckee">Joe Mckee</option>
-                            <option value="Ashleigh Mueller">Ashleigh Mueller</option>
+                            <option value="Ashleigh Muller">Ashleigh Muller</option>
                             <option value="Bruce Nicholson">Bruce Nicholson</option>
                             <option value="Karlie Nicholson">Karlie Nicholson</option>
                             <option value="Kym Nicholson">Kym Nicholson</option>
                             <option value="Lyn Nicholson">Lyn Nicholson</option>
+                            <option value="Paul O'Neile">Paul O'Neile</option>
                             <option value="Rod O'Neile">Rod O'Neile</option>
                             <option value="Wendy O'Neile">Wendy O'Neile</option>
+                            <option value="Sudhaharan Ponniah">Sudhaharan Ponniah</option>
+                            <option value="Willy Ramlie">Willy Ramlie</option>
+                            <option value="Breannon Rayment">Breannon Rayment</option>
+                            <option value="Bruce Robertson">Bruce Robertson</option>
                             <option value="Carl Robertson">Carl Robertson</option>
+                            <option value="Derek Robertson">Derek Robertson</option>
                             <option value="Lorraine Robertson">Lorraine Robertson</option>
                             <option value="Louis Robertson">Louis Robertson</option>
                             <option value="Mandy Robertson">Mandy Robertson</option>
@@ -182,8 +192,7 @@
                             <option value="Bianca Thompson">Bianca Thompson</option>
                             <option value="Paul Thompson">Paul Thompson</option>
                             <option value="Ellis Widjaja">Ellis Widjaja</option>
-                            <option value="Alex Young">Alex Young</option>
-                            <option value="Tanya">Tanya</option>
+                            <option value="Alex Young">Alex Young</option>>
                         </select>
                         
                         <label></label>
