Add underline/border to button text for accommodation WIP: Remove RSVP text from graphic (Need to fix with updated graphic that is more blue than green) Add RSVP text as h1 text with underline to look clickable

--- a/static/index.html
+++ b/static/index.html
@@ -122,7 +122,7 @@
 
             <section id="rsvp" onclick="ClickRSVPSection()">
                 <div class="first">
-
+                    <h1 class="rsvp">RSVP</h1>
                 </div>
                 
                 <div class="second">
@@ -197,9 +197,9 @@
                         
                         <label></label>
                         <input type="radio" name="entry.1263165735" id="rsvpButtonAccept" value="Accept"/>
-                        <label id="rsvpButtonLabelAccept" for="rsvpButtonAccept">Gratefully accept</label>
+                        <label id="rsvpButtonLabelAccept" for="rsvpButtonAccept">Greatfully Accept</label>
                         <input type="radio" name="entry.1263165735" id="rsvpButtonDecline" value="Decline"/>
-                        <label id="rsvpButtonLabelDecline" for="rsvpButtonDecline">Regrettably decline</label>
+                        <label id="rsvpButtonLabelDecline" for="rsvpButtonDecline">Regrettably Decline</label>
 
                         <label id="rsvpDietaryReqLabel"> Dietary Requirements</label>
                         <input type="text" name=entry.1483400416 id="rsvpDietaryReq"/>
