Fix RSVP Name List

--- a/static/index.html
+++ b/static/index.html
@@ -149,7 +149,7 @@
                             <option value="Jemma Ehsman">Jemma Ehsman</option>
                             <option value="Jeree Galvez">Jeree Galvez</option>
                             <option value="Zaida Galvez">Zaida Galvez</option>
-                            <option value="Nick Hart">Nick Hart</option>
+                            <option value="Bianca Grosz">Bianca Grosz</option>
                             <option value="Darryl Horne">Darryl Horne</option>
                             <option value="Elisa Horne">Elisa Horne</option>
                             <option value="Glenn Horne">Glenn Horne</option>
@@ -165,7 +165,6 @@
                             <option value="Hayleigh Livingstone">Hayleigh Livingstone</option>
                             <option value="Lachlan Ma">Lachlan Ma</option>
                             <option value="Joe Mckee">Joe Mckee</option>
-                            <option value="Ashleigh Muller">Ashleigh Muller</option>
                             <option value="Bruce Nicholson">Bruce Nicholson</option>
                             <option value="Karlie Nicholson">Karlie Nicholson</option>
                             <option value="Kym Nicholson">Kym Nicholson</option>
@@ -184,12 +183,12 @@
                             <option value="Mandy Robertson">Mandy Robertson</option>
                             <option value="Megan Robertson">Megan Robertson</option>
                             <option value="Simon Shook">Simon Shook</option>
+                            <option value="Ashleigh Standen">Ashleigh Standen</option>
                             <option value="Cheryl Standen">Cheryl Standen</option>
                             <option value="Dane Standen">Dane Standen</option>
                             <option value="Emily Standen">Emily Standen</option>
                             <option value="Jeremy Stoddard">Jeremy Stoddard</option>
                             <option value="Punitha Subramani">Punitha Subramani</option>
-                            <option value="Bianca Thompson">Bianca Thompson</option>
                             <option value="Paul Thompson">Paul Thompson</option>
                             <option value="Ellis Widjaja">Ellis Widjaja</option>
                             <option value="Alex Young">Alex Young</option>>
