Fix spelling of "Gratefully"

--- a/static/index.html
+++ b/static/index.html
@@ -209,7 +209,7 @@
                         
                         <label></label>
                         <input type="radio" name="entry.1263165735" id="rsvpButtonAccept" value="Accept"/>
-                        <label id="rsvpButtonLabelAccept" for="rsvpButtonAccept">Greatfully Accept</label>
+                        <label id="rsvpButtonLabelAccept" for="rsvpButtonAccept">Gratefully Accept</label>
                         <input type="radio" name="entry.1263165735" id="rsvpButtonDecline" value="Decline"/>
                         <label id="rsvpButtonLabelDecline" for="rsvpButtonDecline">Regrettably Decline</label>
 
