Add guest "Daniel Dennis"

--- a/static/index.html
+++ b/static/index.html
@@ -156,6 +156,7 @@
                             <option value="Lyn Cowan">Lyn Cowan</option>
                             <option value="Megan Cowan">Megan Cowan</option>
                             <option value="Jill Cowburn">Jill Cowburn</option>
+                            <option value="Daniel Dennis">Daniel Dennis</option>
                             <option value="Reg Dorse">Reg Dorse</option>
                             <option value="Jackii Downie">Jackii Downie</option>
                             <option value="Edrick Edrick">Edrick Edrick</option>
