Change "Our Story" h1 font to Jelytta Implement "Weekend Activities" section as background and text, replacing the picture only previous implementation.

--- a/static/index.html
+++ b/static/index.html
@@ -82,6 +82,11 @@
 
             <section id="weekend-activities">
                 <img src="img/bg/backgroundObject3.png" width="1300" height="836">
+                <h1 class="weekend-activities">Weekend Activities</h1>
+                <h2 class="sunday-activities">Sunday 7th April</h2>
+                <p class="sunday-activities">We will be spending Sunday afternoon relaxing, playing games, kicking a ball and having a few drinks. So come join us if you are in the highlands. We will be putting on a BBQ for dinner but please bring a plate of something to add so we can have a proper feast! You will find us from 4pm at 6 Earl St, Bowral - 15 minutes drive from Bendooley Estate.</p>
+                <h2 class="tuesday-activities">Tuesday 9th April</h2>
+                <p class="tuesday-activities">There is only one way to recover after a big night of celebrations and that is by sleeping in, eating a good breaky and having some laughs. We will be heading over to the Courtyard Cafe in Berrima for breakfast at 9am. We would love to see you there.</p>
             </section>
 
             <section id="about-berrima" class="carousel slide">
